--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div id="task2a"></div>
     <button id="textBtn2a">Add Hello World</button>
     <h4>Task 2 b</h4>
-
-
+    <button onclick ="changeBGcolor(event)">Red</button>
+    <button onclick ="changeBGcolor(event)">Green</button>
     <h4>Task 2 c</h4>
-
+    <button onclick="redirectToGoogle()">Google</button>
 
     <!-- ***** -->
     <h3>With jQuery</h3>
