--- a/index.html
+++ b/index.html
@@ -18,15 +18,16 @@
     <!-- ***** -->
     <h3>With jQuery</h3>
     <h4>Task 4 a</h4>
-    <div id="task4a"></div>
-
+    <div id="task4a">
+    <button id="task4">add text</button>
+    </div>
     <h4>Task 4 b</h4>
 
 
     <h4>Task 4 c</h4>
 
 
-    <!-- Insert your JavaScript file -->
+    <script src="jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
