--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
     <h3>With jQuery</h3>
     <h4>Task 4 a</h4>
     <div id="task4a">
-    <button id="task4">add text</button>
+    <button id="addText4">hello World</button>
     </div>
     <h4>Task 4 b</h4>
-
+    <button onclick ="changeBG(event)">Red</button>
+    <button onclick ="changeBG(event)">Green</button>
 
     <h4>Task 4 c</h4>
-
+    <input id="num1" type="number" placeholder="number 1">
+    <input id="num2" type="number" placeholder="number 2">
+    <button id="sum">ADD</button>
+    <p>The sum is <span id="answer"></span></p>
 
     <script src="jquery-3.3.1.min.js"></script>
     <script type="text/javascript" src="script.js"></script>
